[package]
name = "share-clipboard-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arboard = { version = "3.5.0", features = ["wayland-data-control"] }
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
