[package]
name = "share-clipboard-rs"
description = "A lightweight, cross-platform utility written in Rust to seamlessly share your clipboard content across multiple devices on your local network."
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
arboard = { version = "3.5.0", features = ["wayland-data-control"] }
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
